syntax = "proto3";
option go_package = "./proto";

service MemberService {
  rpc AddMember(MemberRequest) returns (MemberResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

message MemberRequest{
  string group = 1;
}


message MemberResponse{
  string group = 1;
  string id = 2;
}

message PingRequest{

}

message PingResponse{

}